# AS-EHR

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  RELEASE_NOTES.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml  requirements-model.txt  requirements.txt  run_all.sh
configs/: bioarc_field_map.example.json  dry_run.json  medgemma_lora.example.json  paper_reported.json
data/: DATA_DICTIONARY.md  f1_confidence_intervals.csv  rouge_l_w.csv  specialty_distribution.csv  specialty_embedding_construction.csv  threshold_sensitivity.csv
data/examples/: raw_ehr_export.jsonl  reader_ratings.csv  records.jsonl  specialty_knowledge_base.csv
scripts/: adapt_ehr_export.py  analyze_reader_study.py  benchmark_latency.py  compare_systems.py  create_manifest.py  evaluate_predictions.py  make_figures.py  make_improved_figures.py  prepare_splits.py  reproduce_tables.py  run_biobert_baseline.py  run_inference.py  run_statistical_analysis.py  run_threshold_sweep.py  serve_api.py  train_lora.py  validate_experiment.py
src/ehr_summ/: __init__.py  baseline.py  config.py  data_loader.py  deidentification.py  embeddings.py  engine.py  evaluation.py  feature_extraction.py  knowledge_base.py  latency.py  metrics.py  modeling.py  pipeline.py  preprocessing.py  prompting.py  reader_study.py  schemas.py  service.py  specialty_filter.py  splits.py  stats.py  (+2 more)
tests/: run_tests.py  test_config.py  test_feature_extraction.py  test_metrics.py  test_pipeline_evaluation.py  test_preprocessing.py  test_reader_latency.py  test_reproduce.py  test_schemas_splits.py  test_specialty_filter.py  test_stats.py
(+3 files in other folders)
